--- a/index.pug
+++ b/index.pug
@@ -4,8 +4,10 @@ html(lang="en")
     meta(charset="UTF-8")
     meta(http-equiv="X-UA-Compatible", content="IE=edge")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
-    title Document
+    title Matrix Calculator
     link(rel="stylesheet", href="./src/css/style.css")
+    link(rel="shortcut icon", href="./images/favicon.ico", type="image/x-icon")
+    link(rel="icon", href="./images/favicon.ico", type="image/x-icon")
   body 
     #app.app 
-    script(type="module" src='./src/js/index.mjs')
+    script(src="./src/javascript/index.mjs")
