reset.scss, mixin.scss 파일 작성 완료

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1,14 +1,3 @@
 @import 'reset';
-
-html, body {
-  width: 100%;
-  height: 100%;
-}
-div.app {
-  width:100%;
-  height:100%;
-  display:flex;
-  flex-direction:column;
-  justify-content: center;
-  align-items: center;
-}
+@import 'variable';
+@import 'mixin';
