style.scss, Controller.js, CalcMatrixContainer.js, NormalMatrixContainer.js 수정 완료

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,162 +1,1 @@
-html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
-b,
-u,
-i,
-center,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-footer,
-header,
-hgroup,
-menu,
-nav,
-output,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
-}
-
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section {
-  display: block;
-}
-
-body {
-  line-height: 1;
-}
-
-ol,
-ul {
-  list-style: none;
-}
-
-blockquote,
-q {
-  quotes: none;
-}
-
-blockquote:before, blockquote:after {
-  content: '';
-  content: none;
-}
-
-q:before, q:after {
-  content: '';
-  content: none;
-}
-
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-
-* {
-  outline: none;
-  border: none;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-}
-
-html, body {
-  width: 100%;
-  height: 100%;
-}
-
-.app {
-  width: 100%;
-  height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-/*# sourceMappingURL=style.css.map */
+html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after{content:"";content:none}q:before,q:after{content:"";content:none}table{border-collapse:collapse;border-spacing:0}*{outline:none;border:none;box-sizing:border-box}html,body{width:100%;height:100%}.app{width:100%;height:100%;display:flex;flex-direction:row;justify-content:center;align-items:center;justify-content:center}.app section.sectionMatrixContainer{display:flex;flex-direction:column;justify-content:center;align-items:center;width:30%;height:95%;border:1px solid #000;margin-right:3vw}.app section.sectionMatrixContainer .divTopNormalMatrixContainer{width:100%;height:65%;margin-bottom:.7vw}.app section.sectionMatrixContainer .divBottomNormalMatrixContainer{width:100%;height:35%;display:flex;flex-direction:column;justify-content:center;align-items:center}.app section.sectionMatrixContainer .divBottomNormalMatrixContainer h1.h1NormalMatrixTitle{width:100%;font-size:3.5vw;font-family:"Times New Roman",Times,serif;padding-left:1vw;margin-bottom:1vw}.app section.sectionMatrixContainer .divBottomNormalMatrixContainer .divBottomTopNormalMatrixContainer{display:flex;flex-direction:row;justify-content:center;align-items:center;width:100%;margin-bottom:1.5vw}.app section.sectionMatrixContainer .divBottomNormalMatrixContainer .divBottomTopNormalMatrixContainer input{width:13vw;border:1px solid #000;text-align:center;font-size:2vw;font-family:"Times New Roman",Times,serif;height:3.5vw}.app section.sectionMatrixContainer .divBottomNormalMatrixContainer .divBottomTopNormalMatrixContainer input.inputNormalMatrixRow{margin-right:1.5vw}.app section.sectionMatrixContainer .divBottomNormalMatrixContainer .divBottomBottomNormalMatrixContainer{width:100%;display:flex;flex-direction:row;justify-content:center;align-items:center;margin-bottom:1.5vw}.app section.sectionMatrixContainer .divBottomNormalMatrixContainer .divBottomBottomNormalMatrixContainer button.buttonCreateNormalMatrix{display:inline-block;width:27.5vw;height:5vw;font-size:3.5vw;font-family:"Times New Roman",Times,serif;border-radius:1.5vw;background-color:#7b5b91;color:#fafafa;cursor:pointer}.app section.sectionMatrixContainer .divBottomNormalMatrixContainer .divBottomBottomNormalMatrixContainer button.buttonRandomNormalMatrixContainer{display:none;width:13.75vw;height:5vw;border-top-left-radius:1.5vw;border-bottom-left-radius:1.5vw;background-color:#7b5b91;border-right:1px solid #fafafa;cursor:pointer}.app section.sectionMatrixContainer .divBottomNormalMatrixContainer .divBottomBottomNormalMatrixContainer button.buttonRandomNormalMatrixContainer i.iDice{color:#fafafa;font-size:3.5vw}.app section.sectionMatrixContainer .divBottomNormalMatrixContainer .divBottomBottomNormalMatrixContainer button.buttonDeleteNormalMatrixContainer{display:none;width:13.75vw;height:5vw;border-top-right-radius:1.5vw;border-bottom-right-radius:1.5vw;background-color:#7b5b91;cursor:pointer}.app section.sectionMatrixContainer .divBottomNormalMatrixContainer .divBottomBottomNormalMatrixContainer button.buttonDeleteNormalMatrixContainer i.iTrashCan{color:#fafafa;font-size:3.5vw}.app section.sectionCalcMatrixContainer{display:flex;flex-direction:column;justify-content:center;align-items:center;width:30%;height:95%;border:1px solid #000}.app section.sectionCalcMatrixContainer .divTopCalcMatrixContainer{width:100%;height:35%;display:flex;flex-direction:column;justify-content:center;align-items:center;margin-bottom:.7vw}.app section.sectionCalcMatrixContainer .divTopCalcMatrixContainer h1.h1CalcMatrixTitle{width:100%;font-size:3.5vw;font-family:"Times New Roman",Times,serif;padding-left:1vw;margin-bottom:1vw}.app section.sectionCalcMatrixContainer .divTopCalcMatrixContainer h2.h2CalcMatrixAuthor{width:100%;font-size:1.5vw;text-align:right;font-family:"Times New Roman",Times,serif;padding-right:1vw;margin-bottom:1.5vw}.app section.sectionCalcMatrixContainer .divTopCalcMatrixContainer .divTopCalcMatrixButtonContainer{display:flex;flex-direction:row;justify-content:center;align-items:center;width:100%;justify-content:space-around}.app section.sectionCalcMatrixContainer .divTopCalcMatrixContainer .divTopCalcMatrixButtonContainer button{background-color:transparent}.app section.sectionCalcMatrixContainer .divTopCalcMatrixContainer .divTopCalcMatrixButtonContainer button i{cursor:pointer;font-size:6vw}.app section.sectionCalcMatrixContainer .divBottomCalcMatrixContainer{width:100%;height:65%;display:flex;flex-direction:column;justify-content:center;align-items:center}
