style.scss, index.mjs, Controller.js, CalcMatrixContainer.js, NormalMatrixContainer.js, ElementTool.js수정, Modal.js 작성 완료

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -13,6 +13,9 @@ body {
 	height: 100%;
 	@include flexRow;
 	justify-content: center;
+	section {
+		border-radius: 1vw;
+	}
 	section.sectionMatrixContainer {
 		@include flexCol;
 		width: 30%;
@@ -59,7 +62,7 @@ body {
 				margin-bottom: 1.5vw;
 				button.buttonCreateNormalMatrix {
 					display: inline-block;
-					//display: none;
+					// display: none;
 					width: 27.5vw;
 					height: 5vw;
 					font-size: 3.5vw;
@@ -68,10 +71,14 @@ body {
 					background-color: rgb(123, 91, 145);
 					color: #fafafa;
 					cursor: pointer;
+					transition: all 300ms ease-in-out;
+				}
+				button.buttonCreateNormalMatrix:hover {
+					background-color: rgb(89, 50, 114);
 				}
 				button.buttonRandomNormalMatrixContainer {
 					display: none;
-					//display: inline-block;
+					// display: inline-block;
 					width: 13.75vw;
 					height: 5vw;
 					border-top-left-radius: 1.5vw;
@@ -79,24 +86,32 @@ body {
 					background-color: rgb(123, 91, 145);
 					border-right: 1px solid #fafafa;
 					cursor: pointer;
+          transition: all 300ms ease-in-out;
 					i.iDice {
 						color: #fafafa;
 						font-size: 3.5vw;
 					}
 				}
+        button.buttonRandomNormalMatrix:hover {
+					background-color: rgb(89, 50, 114);
+				}
 				button.buttonDeleteNormalMatrixContainer {
 					display: none;
-					//display: inline-block;
+					// display: inline-block;
 					width: 13.75vw;
 					height: 5vw;
 					border-top-right-radius: 1.5vw;
 					border-bottom-right-radius: 1.5vw;
 					background-color: rgb(123, 91, 145);
 					cursor: pointer;
+          transition: all 300ms ease-in-out;
 					i.iTrashCan {
 						color: #fafafa;
 						font-size: 3.5vw;
 					}
+				}
+        button.buttonDeleteNormalMatrix:hover {
+					background-color: rgb(89, 50, 114);
 				}
 			}
 		}
@@ -113,14 +128,14 @@ body {
 			margin-bottom: 0.7vw;
 			h1.h1CalcMatrixTitle {
 				width: 100%;
+				text-align: center;
 				font-size: 3.5vw;
 				font-family: 'Times New Roman', Times, serif;
-				padding-left: 1vw;
-				margin-bottom: 1vw;
+				margin-bottom: 0.5vw;
 			}
 			h2.h2CalcMatrixAuthor {
 				width: 100%;
-				font-size: 1.5vw;
+				font-size: 1.3vw;
 				text-align: right;
 				font-family: 'Times New Roman', Times, serif;
 				padding-right: 1vw;
@@ -129,12 +144,18 @@ body {
 			.divTopCalcMatrixButtonContainer {
 				@include flexRow;
 				width: 100%;
-				justify-content: space-around;
+				justify-content: center;
 				button {
 					background-color: transparent;
+          margin: 0 1.5vw;
 					i {
-						cursor: pointer;
+						color: rgb(123, 91, 145);
 						font-size: 6vw;
+						cursor: pointer;
+						transition: all 300ms ease-in-out;
+					}
+					i:hover {
+						color: rgb(89, 50, 114);
 					}
 				}
 			}
